# smart-qa-rag

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  dependencies.py  main.py
app/agents/: __init__.py  evaluator.py  generator.py  graph.py  query_analyzer.py  retriever_agent.py  sql_agent.py  state.py
app/models/: __init__.py  schemas.py
app/routers/: __init__.py  collections.py  documents.py  qa.py
app/services/: __init__.py  bm25_retriever.py  collection_service.py  document_loader.py  document_service.py  embedding_engine.py  prompt_builder.py  qa_service.py  reranker.py  retriever.py  sql_store.py  text_splitter.py
app/utils/: __init__.py  exceptions.py  logger.py
docs/: SDD.md
static/: app.js  index.html  style.css
tests/: __init__.py  conftest.py  test_api_collections.py  test_api_documents.py  test_api_qa.py  test_document_loader.py  test_qa_service.py  test_retriever.py  test_text_splitter.py
